--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
     <artifactId>poi-ooxml</artifactId>
     <version>4.1.2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.8.1</version>
+</dependency>
 
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
